turmites.lessons.turmites.langton.Langton.scala.code
def step() {
	
	var c = getCouleursol()
	baisseBrosse()
	c match {
	case Color.black => c=Color.white; gauche();avance()
	case Color.white => c=Color.black;droite();avance()
}
leveBrosse()}
